tests/ui/fail/fn-missing-output-01.rs
fn main() {}

#[union_fn::union_fn]
trait Foo {
    type Output = i32;

    fn foo() {}
}
